<resources>
    <string name="app_name">Cuaderno de clase</string>
    <string name="opciones">Elija una opción</string>
    <string name="opcionAlumnos">Administrar alumnos</string>
    <string name="opcionFaltas">Administrar faltas</string>
    <string name="conectando">Conectando...</string>
    <string name="exitoDescarga">Descarga con éxito</string>
    <string name="datosNulos">Datos nulos</string>
    <string name="faltas">Faltas</string>
    <string name="listaAlumnos">Lista de alumnos</string>
    <string name="confirmacionEliminar">¿Desea eliminar a %s?</string>
    <string name="eliminar">Eliminar alumno</string>
    <string name="errorEliminar">Error al eliminar el alumno</string>
    <string name="exitoEliminar">Alumno eliminado con éxito</string>
    <string name="agregarAlumno">Añadir alumno</string>
    <string name="exitoAgregar">Alumno añadido con éxito</string>
    <string name="errorAgregar">Error al añadir el alumno</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="telefono">Teléfono</string>
    <string name="codigoPostal">Código postal</string>
    <string name="email">E-mail</string>
    <string name="agregar">Añadir</string>
    <string name="enviar">Enviar</string>
    <string name="modificar">Actualizar</string>
    <string name="enviarEmail">Enviar un e-mail</string>
    <string name="exitoEnviarEmail">E-mail enviado con éxito</string>
    <string name="emailIncompleto">La dirección y la contraseña no pueden estar vacías</string>
    <string name="errorEmail">Error al enviar el e-mail</string>
    <string name="modificarAlumno">Actualizar información</string>
    <string name="exitoActualizar">Información actualizada con éxito</string>
    <string name="errorActualizar">Error al actualizar la información</string>
    <string name="eliminarAlumno">Eliminar alumno</string>
    <string name="mensaje">Mensaje</string>
    <string name="asunto">Asunto</string>
    <string name="para">Para</string>
    <string name="clave">Contraseña</string>
    <string name="de">De</string>
    <string name="agregarFalta">Añadir falta</string>
    <string name="tipo">Tipo</string>
    <string name="injustificada">Injustificada</string>
    <string name="justificada">Justificada</string>
    <string name="retraso">Retraso</string>
    <string name="bueno">Bueno</string>
    <string name="regular">Regular</string>
    <string name="malo">Malo</string>
    <string name="positiva">Positiva</string>
    <string name="negativa">Negativa</string>
    <string name="falta">Falta</string>
    <string name="trabajo">Trabajo</string>
    <string name="actitud">Actitud</string>
    <string name="observaciones">Observaciones</string>
</resources>