<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".EmailActivity">

    <TextView
        android:id="@+id/txvDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de" />

    <EditText
        android:id="@+id/edtDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="alumno@portadaalta.info"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txvClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clave" />



    <EditText
        android:id="@+id/edtClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >
        <requestFocus />
        </EditText>

    <TextView
        android:id="@+id/txvPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para" />

    <EditText
        android:id="@+id/edtPara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txvAsunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asunto" />

    <EditText
        android:id="@+id/edtAsunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailSubject" />

    <TextView
        android:id="@+id/txvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje" />

    <EditText
        android:id="@+id/edtMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textShortMessage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar" />
    </LinearLayout>
</LinearLayout>