<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".AgregarAlumnoActivity">

    <TextView
        android:id="@+id/txvAgregarAlumnoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/edtAgregarAlumnoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alumno Portada Alta"
        android:textSize="18sp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txvAgregarAlumnoDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion" />

    <EditText
        android:id="@+id/edtAgregarAlumnoDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calle Cómpeta, 31"
        android:textSize="16sp"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/txvAgregarAlumnoCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad" />

    <EditText
        android:id="@+id/edtAgregarAlumnoCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Málaga"
        android:textSize="16sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/txvAgregarAlumnoCodigoPostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigoPostal" />

    <EditText
        android:id="@+id/edtAgregarAlumnoCodigoPostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="29007"
        android:textSize="16sp"
        android:inputType="number" />

    <TextView
        android:id="@+id/txvAgregarAlumnoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono" />

    <EditText
        android:id="@+id/edtAgregarAlumnoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="951297929"
        android:textSize="16sp"
        android:inputType="phone" />

    <TextView
        android:id="@+id/txvAgregarAlumnoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edtAgregarAlumnoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="alumno@elsabernoocupalugar.es"
        android:textSize="16sp"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar" />
        </LinearLayout>
</LinearLayout>