<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jroldan.acdat.cuadernoclase.MainActivity">

    <TextView
        android:id="@+id/txvOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opciones"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/btnAlumnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvOpciones"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/opcionAlumnos" />

    <Button
        android:id="@+id/btnFaltas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAlumnos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:text="@string/opcionFaltas" />
</RelativeLayout>
