<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarFaltaActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">

    <TextView
        android:id="@+id/txvTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:paddingRight="@dimen/tipoPaddingDerecho" />

    <Spinner
        android:id="@+id/spnTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/tipoFalta" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">

    <TextView
        android:id="@+id/txvTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trabajo"
        android:paddingRight="@dimen/trabajoPaddingDerecho" />

    <Spinner
        android:id="@+id/spnTrabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/trabajo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">

    <TextView
        android:id="@+id/txvActitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actitud"
        android:paddingRight="@dimen/actitudPaddingDerecho" />

    <Spinner
        android:id="@+id/spnActitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/actitud"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">

    <TextView
        android:id="@+id/txvObservaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observaciones"
        android:paddingRight="@dimen/observacionesPaddingDerecho" />

    <EditText
        android:id="@+id/edtObservaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar" />
    </LinearLayout>

</LinearLayout>